--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "ecm sample sync app",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mars Kim",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bluebird": "^3.7.2",
+    "dotenv": "^16.0.3",
+    "pg": "^8.9.0",
+    "pg-format": "^1.0.4",
+    "puppeteer": "^19.7.2"
+  }
 }
