--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "packageManager": "yarn@3.4.1",
   "dependencies": {
     "@fastify/autoload": "^5.7.1",
+    "@fastify/cors": "^8.2.0",
     "bluebird": "^3.7.2",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
