refactor: separate lambda api logics by url path for timeout, memorySize setup

--- a/template.yaml
+++ b/template.yaml
@@ -11,7 +11,26 @@ Globals:
     Timeout: 3
 
 Resources:
-  EcmSampler:
+  EcmSamplerFetch:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      Handler: dist/lambda.handler
+      PackageType: Zip
+      Runtime: nodejs16.x
+      Architectures:
+        - x86_64
+      FunctionUrlConfig:
+        AuthType: NONE
+        Cors:
+          AllowOrigins:
+            - "*"
+      Events:
+        FetchtApi:
+          Type: HttpApi
+          Properties:
+            Path: /
+            Method: ANY
+  EcmSamplerSync:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       Handler: dist/lambda.handler
@@ -27,15 +46,10 @@ Resources:
           AllowOrigins:
             - "*"
       Events:
-        RootEndpoint:
-          Type: HttpApi
-          Properties:
-            Path: /
-            Method: ANY
-        AppEventAPI:
+        SyncAPI:
           Type: HttpApi # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /{proxy+}
+            Path: /sync
             Method: ANY
 
 
@@ -43,12 +57,18 @@ Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  AppEventAPI:
+  APIEndpoint:
     Description: "API Gateway endpoint URL for Prod stage for EcmSampler function"
     Value: !Sub "https://${ServerlessHttpApi}.execute-api.${AWS::Region}.amazonaws.com/"
-  EcmSampler:
-    Description: "EcmSampler Lambda Function ARN"
-    Value: !GetAtt EcmSampler.Arn
-  EcmSamplerIamRole:
-    Description: "Implicit IAM Role created for EcmSampler function"
-    Value: !GetAtt EcmSamplerRole.Arn
+  EcmSamplerFetch:
+    Description: "EcmSamplerFetch Lambda Function ARN"
+    Value: !GetAtt EcmSamplerFetch.Arn
+  EcmSamplerFetchIamRole:
+    Description: "Implicit IAM Role created for EcmSamplerFetch function"
+    Value: !GetAtt EcmSamplerFetchRole.Arn
+  EcmSamplerSync:
+    Description: "EcmSamplerSync Lambda Function ARN"
+    Value: !GetAtt EcmSamplerSync.Arn
+  EcmSamplerSyncIamRole:
+    Description: "Implicit IAM Role created for EcmSamplerSync function"
+    Value: !GetAtt EcmSamplerSyncRole.Arn
