--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "npm run build:ts && fastify start -l info dist/app.js -p 4000",
     "build:ts": "tsc",
     "test": "tsc -p test/tsconfig.test.json && cross-env TS_NODE_FILES=true tap -Rspec --timeout 120 --no-cov --ts test/**/*.test.ts",
-    "sam-local-invoke:fetch": "sam local invoke -e test/events/fetch-event.json",
-    "sam-local-invoke:sync": "sam local invoke -e test/events/sync-event.json"
+    "sam-local-invoke:fetch": "sam local invoke 'EcmSamplerFetch' -e test/events/fetch-event.json",
+    "sam-local-invoke:sync": "sam local invoke 'EcmSamplerSync' -e test/events/sync-event.json"
   },
   "author": "Mars Kim",
   "license": "ISC",
@@ -26,8 +26,10 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "fastify-cli": "^5.7.1",
+    "node-fetch": "^2.6.9",
     "pg": "^8.9.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "qs": "^6.11.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.111",
@@ -36,6 +38,7 @@
     "@types/node": "^18.14.1",
     "@types/pg": "^8.6.6",
     "@types/pg-format": "^1.0.2",
+    "@types/qs": "^6.9.7",
     "@types/tap": "^15.0.8",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
