--- a/package.json
+++ b/package.json
@@ -21,24 +21,23 @@
     "@fastify/cors": "^8.2.0",
     "@fastify/env": "^4.2.0",
     "@fastify/postgres": "^5.2.0",
+    "axios": "^1.3.4",
     "bluebird": "^3.7.2",
     "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "fastify-cli": "^5.7.1",
-    "node-fetch": "^2.6.9",
     "pg": "^8.9.0",
-    "pg-format": "^1.0.4",
-    "qs": "^6.11.1"
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.111",
+    "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.38",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.1",
     "@types/pg": "^8.6.6",
     "@types/pg-format": "^1.0.2",
-    "@types/qs": "^6.9.7",
     "@types/tap": "^15.0.8",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
